--- a/minha-landpage/src/components/services/services.css
+++ b/minha-landpage/src/components/services/services.css
@@ -108,7 +108,7 @@ h2 {
     text-transform: uppercase;
     padding: 0 10px;
     color: #00d1b2;
-    background: #243137;
+    background: transparent;
     opacity: 0;
     letter-spacing: 2px;
     transition: all 0.5s ease-in-out;
