--- a/minha-landpage/src/components/services/services.css
+++ b/minha-landpage/src/components/services/services.css
@@ -37,7 +37,7 @@ h2 {
 /* Estilo para os cards */
 .card {
     width: 350px;
-    height: 300px; /* Ajuste a altura para melhor visualização */
+    height: 400px; /* Ajuste a altura para melhor visualização */
     background: #243137;
     position: relative;
     display: flex;
@@ -108,7 +108,7 @@ h2 {
     text-transform: uppercase;
     padding: 0 10px;
     color: #00d1b2;
-    background: transparent;
+    background: #243137;
     opacity: 0;
     letter-spacing: 2px;
     transition: all 0.5s ease-in-out;
