--- a/minha-landpage/src/App.css
+++ b/minha-landpage/src/App.css
@@ -12,7 +12,7 @@ body, html {
 
 .App-header {
   height: 100vh;
-  background-image: url('../src/assets/images/transferir_waifu2x_photo_noise3_scale_waifu2x_photo_noise3_scale_2900.png');
+  background-image: url('../src/assets/images/banner-consultoria.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -29,7 +29,7 @@ body, html {
   font-size: 2rem;
   height: 80vh;
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   margin: 0 16px 0 60px;
@@ -38,6 +38,7 @@ body, html {
 .App-header__info h1 {
   text-shadow: rgb(0, 247, 255) 1px 0 10px;
   text-align: left;
+  z-index: 1;
 }
 
 .App-header__btn {
